--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <title>Genesis</title>
 
+<meta	name="author"	content="Gabriel Cesar" />
 <meta   http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <script	src="js/.js"	type="text/javascript"></script>
