--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <link   href="css/.css"	rel="stylesheet" type="text/css" />
 <link   href="css/.css"	rel="stylesheet" type="text/css" />
 
+foo
+
 </head>
 
 <body>
