--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link   href="css/.css"	rel="stylesheet" type="text/css" />
 <link   href="css/.css"	rel="stylesheet" type="text/css" />
 
-foo
+gabriel cesar
 
 </head>
 
